--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ img{
   place-items: center;
   border-radius: 10px;
   border: 2px solid var(--dark);
+  transition: all 300ms;
 }
 .game-info{
   align-self: safe;
@@ -66,7 +67,7 @@ img{
 }
 .option{
   position: relative;
-  /* background-color: var(--light); */
+  background-color: var(--light);
   width: 80px;
 }
 .option::before{
