--- a/style.css
+++ b/style.css
@@ -90,6 +90,79 @@ img{
   content: "scissors";
 }
 .option:hover::before{
-  transform: translate(-50%, 40%);
+  transform: translate(-50%, 55%);
   opacity: 1;
+}
+.option-svg{
+  transition: all 300ms;
+}
+.option:hover .option-svg{
+  scale: 1.1;
+}
+.end-window.active{
+  width: 500px;
+  height: 400px;
+  transform: translate(-50%, -50%) scale(1);
+}
+.end-window{
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  background-color: var(--light);
+  border-radius: 10px;
+  transform: translate(-50%, -50%) scale(0);
+  transition: all 150ms;
+
+  display: flex;
+  flex-direction: column;
+}
+.overlay{
+  display: none;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1c1c;
+  opacity: .7;
+}
+.overlay.active{
+  display: block;
+}
+.score-box{
+  flex: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  text-align: center;
+  line-height: 2;
+}
+.player-score-box{
+  flex: 1;
+}
+.reset-btn-box{
+  flex: auto;
+  display: grid;
+  place-content: center;
+}
+.reset-btn{
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  background-color: var(--dark);
+  color: var(--light);
+  font-size: 24px;
+  padding: 1rem 2rem;
+  cursor: pointer;
+}
+.reset-btn:hover{
+  background-color: #1c1c1ce3;
+}
+.winner{
+  flex: auto;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  font-size: 32px;
 }
